--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-vector-icons": "^10.0.0",
     "react-native-webview": "^13.8.6",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "expo-updates": "~0.25.18"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
