--- a/package.json
+++ b/package.json
@@ -9,35 +9,35 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/material-bottom-tabs": "^6.2.17",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "@tanstack/react-query": "^5.0.0",
     "axios": "^1.5.1",
-    "expo": "^51.0.18",
-    "expo-font": "^12.0.7",
-    "expo-linear-gradient": "^13.0.2",
-    "expo-splash-screen": "^0.27.5",
-    "expo-status-bar": "^1.12.1",
+    "expo": "^52.0.28",
+    "expo-font": "~13.0.3",
+    "expo-linear-gradient": "~14.0.2",
+    "expo-splash-screen": "~0.29.21",
+    "expo-status-bar": "~2.0.1",
+    "expo-updates": "~0.26.13",
     "lodash": "^4.17.21",
-    "lottie-react-native": "^6.7.0",
+    "lottie-react-native": "7.1.0",
     "nativewind": "^2.0.11",
-    "react": "18.2.0",
-    "react-native": "^0.74.3",
+    "react": "18.3.1",
+    "react-native": "0.76.6",
     "react-native-heroicons": "^3.2.0",
     "react-native-paper": "^5.10.6",
-    "react-native-reanimated": "^3.10.1",
+    "react-native-reanimated": "~3.16.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-vector-icons": "^10.0.0",
-    "react-native-webview": "^13.8.6",
-    "tailwindcss": "^3.3.2",
-    "expo-updates": "~0.25.18"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.25.2",
+    "tailwindcss": "^3.3.2"
   },
   "private": true
 }
